--- a/4ЕИТ_A6.csproj
+++ b/4ЕИТ_A6.csproj
@@ -85,7 +85,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="A6.rtf" />
+    <None Include="DOC\A6.rtf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
